# BasicUrlscanPy

./: README.md  base.py  pyproject.toml
base/: __init__.py  exceptions.py
tests/: test_base.py
